--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-        <h1><a href="#aboutme">ABOUT ME</a></h1>
+        <h1><a href="#intro">ABOUT ME</a></h1>
         <nav>
             <ul>
                 <li><a href="#skills">SKILLS</a></li>
                 <li><a href="#experience">EXPERIENCE</a></li>
                 <!-- <li><a href="#blog">Blog</a></li> -->
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -22,6 +22,16 @@
         <section class="intro">
             <div class="intro-text">
                 <h2>Hi!<br>I'm Shun Xu</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare mollis risus sed mattis. Nunc at mauris ut velit sollicitudin dignissim ac eget turpis. Duis quis laoreet tellus, eu condimentum mauris. Quisque sed imperdiet lorem. Fusce euismod risus eu tortor dapibus vehicula. Integer rhoncus lorem nec lobortis sagittis. Aenean elementum et lorem in suscipit. Suspendisse at diam eget quam laoreet viverra.</p>
+                <button>View Work</button>
+            </div>
+            <div class="intro-image">
+                <img src="aboutme.png" alt="Shun Xu">
+            </div>
+        </section>
+        <section class="intro">
+            <div class="intro-text" id="skills">
+                <h2>My Skills<br></h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare mollis risus sed mattis. Nunc at mauris ut velit sollicitudin dignissim ac eget turpis. Duis quis laoreet tellus, eu condimentum mauris. Quisque sed imperdiet lorem. Fusce euismod risus eu tortor dapibus vehicula. Integer rhoncus lorem nec lobortis sagittis. Aenean elementum et lorem in suscipit. Suspendisse at diam eget quam laoreet viverra.</p>
                 <button>View Work</button>
             </div>
