portfolio contact setup

--- a/index.html
+++ b/index.html
@@ -38,6 +38,37 @@
 
             </div>
         </section>
+        <section class="portfolio">
+            <h2>Portfolio</h2>
+            <div class="portfolio-items">
+                <div class="portfolio-item">
+                    <img src="path/to/image1.jpg" alt="Client 1">
+                    <button>Client 1</button>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare moll.</p>
+                </div>
+                <div class="portfolio-item">
+                    <img src="path/to/image2.jpg" alt="Client 2">
+                    <button>Client 2</button>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare moll.</p>
+                </div>
+                <div class="portfolio-item">
+                    <img src="path/to/image3.jpg" alt="Client 3">
+                    <button>Client 3</button>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare moll.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="cta">
+            <div class="cta-image">
+                <img src="path/to/cta-image.jpg" alt="Ready to work with me?">
+            </div>
+            <div class="cta-text">
+                <h2>Ready to work with me?</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare mollis risus sed mattis. Nunc at mauris ut velit sollicitudin dignissim ac eget turpis. Duis quis laoreet tellus, eu condimentum mauris. Quisque sed imperdiet lorem. Fusce euismod risus eu tortor dapibus vehicula. Integer rhoncus lorem nec lobortis sagittis. Aenean elementum et lorem in suscipit. Suspendisse at diam eget quam laoreet viverra.</p>
+                <button>Contact</button>
+            </div>
+        </section>
     </main>
     <script src="index.js"></script>
 </body>
