set up myskills

--- a/index.html
+++ b/index.html
@@ -30,12 +30,47 @@
             </div>
         </section>
         <section class="skills">
-            <div class="skills-text" id="skills">
-                <h2>My Skills<br></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare mollis risus sed mattis. Nunc at mauris ut velit sollicitudin dignissim ac eget turpis. Duis quis laoreet tellus, eu condimentum mauris. Quisque sed imperdiet lorem. Fusce euismod risus eu tortor dapibus vehicula. Integer rhoncus lorem nec lobortis sagittis. Aenean elementum et lorem in suscipit. Suspendisse at diam eget quam laoreet viverra.</p>
-            </div>
-            <div class="skills-image">
-
+            <h2>My Skills</h2>
+            <p>What Do I Offer?</p>
+            <p>A graphic designer is a professional within the graphic design and graphic arts industry who assembles together images, typography, or motion graphics to create a piece of design.</p>
+            <h3>My Skillset</h3>
+            <div class="skills-container">
+                <div class="skill">
+                    <h4>Javascript</h4>
+                    <p>Makes web pages interactive</p>
+                </div>
+                <div class="skill">
+                    <h4>Python</h4>
+                    <p>Creates dynamic websites and applications</p>
+                </div>
+                <div class="skill">
+                    <h4>HTML</h4>
+                    <p>Defines the content and structure of web content</p>
+                </div>
+                <div class="skill">
+                    <h4>CSS</h4>
+                    <p>Subtitle</p>
+                </div>
+                <div class="skill">
+                    <h4>SQL</h4>
+                    <p>Subtitle</p>
+                </div>
+                <div class="skill">
+                    <h4>Flask</h4>
+                    <p>Subtitle</p>
+                </div>
+                <div class="skill">
+                    <h4>Express</h4>
+                    <p>Subtitle</p>
+                </div>
+                <div class="skill">
+                    <h4>Redux</h4>
+                    <p>Subtitle</p>
+                </div>
+                <div class="skill">
+                    <h4>React</h4>
+                    <p>Subtitle</p>
+                </div>
             </div>
         </section>
         <section class="portfolio">
