added portfolio images

--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
             <h2>Portfolio</h2>
             <div class="portfolio-items">
                 <div class="portfolio-item">
-                    <img src="path/to/image1.jpg" alt="Client 1">
-                    <button>Client 1</button>
+                    <img src="sfeventcover.png" alt="SF Events">
+                    <button>SF Events</button>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare moll.</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="path/to/image2.jpg" alt="Client 2">
-                    <button>Client 2</button>
+                    <img src="travelernotecover.png" alt="Traveler Note">
+                    <button>Traveler Note</button>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare moll.</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="path/to/image3.jpg" alt="Client 3">
-                    <button>Client 3</button>
+                    <img src="musiccover.png" alt="Music">
+                    <button>Music</button>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare moll.</p>
                 </div>
             </div>
