modified my skills

--- a/index.html
+++ b/index.html
@@ -36,35 +36,47 @@
             <h3>My Skillset</h3>
             <div class="skills-container">
                 <div class="skill">
-                    <h4>Javascript</h4>
-                    <p>Makes web pages interactive</p>
-                </div>
-                <div class="skill">
-                    <h4>Python</h4>
-                    <p>Creates dynamic websites and applications</p>
-                </div>
-                <div class="skill">
-                    <h4>HTML</h4>
-                    <p>Defines the content and structure of web content</p>
-                </div>
-                <div class="skill">
                     <h4>CSS</h4>
-                    <p>Subtitle</p>
-                </div>
-                <div class="skill">
-                    <h4>SQL</h4>
-                    <p>Subtitle</p>
-                </div>
-                <div class="skill">
-                    <h4>Flask</h4>
-                    <p>Subtitle</p>
+                    <p>Skilled in designing and styling web pages</p>
                 </div>
                 <div class="skill">
                     <h4>Express</h4>
-                    <p>Subtitle</p>
+                    <p>Experienced in developing backend services and APIs</p>
+                </div>
+                <div class="skill">
+                    <h4>Flask</h4>
+                    <p>Developed web applications and RESTful APIs</p>
+                </div>
+                <div class="skill">
+                    <h4>HTML5</h4>
+                    <p>Used for structuring and presenting web content</p>
+                </div>
+                <div class="skill">
+                    <h4>Javascript</h4>
+                    <p>Made web pages interactive</p>
+                </div>
+                <div class="skill">
+                    <h4>Python</h4>
+                    <p>Created dynamic websites and applications</p>
+                </div>
+                <div class="skill">
+                    <h4>React</h4>
+                    <p>Built dynamic and responsive web applications</p>
                 </div>
                 <div class="skill">
                     <h4>Redux</h4>
+                    <p>Utilized for application state management</p>
+                </div>
+                <div class="skill">
+                    <h4>SQL</h4>
+                    <p>Wrote queries to manage data</p>
+                </div>
+                <div class="skill">
+                    <h4>SQLAlchemy</h4>
+                    <p>Interacted with retional database in Python Programs</p>
+                </div>
+                <div class="skill">
+                    <h4>React</h4>
                     <p>Subtitle</p>
                 </div>
                 <div class="skill">
@@ -96,7 +108,7 @@
 
         <section class="cta">
             <div class="cta-image">
-                <img src="path/to/cta-image.jpg" alt="Ready to work with me?">
+                <img src="contact.png" alt="Ready to work with me?">
             </div>
             <div class="cta-text">
                 <h2>Ready to work with me?</h2>
