--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         </section>
         <section class="skills">
             <h2>My Skills</h2>
-            <p>What Do I Offer?</p>
-            <p>A graphic designer is a professional within the graphic design and graphic arts industry who assembles together images, typography, or motion graphics to create a piece of design.</p>
-            <h3>My Skillset</h3>
+            <h3>Technical Skillset</h3>
             <div class="skills-container">
                 <div class="skill">
                     <h4>CSS</h4>
@@ -76,12 +74,27 @@
                     <p>Interacted with retional database in Python Programs</p>
                 </div>
                 <div class="skill">
-                    <h4>React</h4>
-                    <p>Subtitle</p>
+                    <h4>C# and Unity</h4>
+                    <p>Experienced in game development, asset integration, and scripting</p>
                 </div>
                 <div class="skill">
-                    <h4>React</h4>
-                    <p>Subtitle</p>
+                    <h4>Blender, Maya and Substance Painter</h4>
+                    <p>Experienced in 3D modeling, animation, and rendering</p>
+                </div>
+                <div class="skill">
+                    <h4>Attention to Detail</h4>
+                    <p>Excellent at ensuring accuracy and precision in all tasks</p>
+                </div>
+                <div class="skill">
+                    <h4>Problem Solving</h4>
+                    <p>Strong ability to identify issues, devise solutions, and implement effective fixes</p>
+                </div>
+            </div>
+            <h3>Soft Skillset</h3>
+            <div class="skills-container">
+                <div class="skill">
+                    <h4>CSS</h4>
+                    <p>Skilled in designing and styling web pages</p>
                 </div>
             </div>
         </section>
