--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare moll.</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="musiccover1.png" alt="Music">
+                    <img src="musiccover.png" alt="Music">
                     <button>Music</button>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare moll.</p>
                 </div>
