--- a/index.html
+++ b/index.html
@@ -93,8 +93,32 @@
                     <p>Strong ability to identify issues, devise solutions, and implement effective fixes</p>
                 </div>
                 <div class="skill">
-                    <h4>CSS</h4>
-                    <p>Skilled in designing and styling web pages</p>
+                    <h4>Communication</h4>
+                    <p>Effective in conveying information clearly and concisely</p>
+                </div>
+                <div class="skill">
+                    <h4>Customer Service</h4>
+                    <p>Experienced in managing customer interactions, resolving issues, and providing support.</p>
+                </div>
+                <div class="skill">
+                    <h4>Translation</h4>
+                    <p>Capable of translating content while maintaining original meaning and context.</p>
+                </div>
+                <div class="skill">
+                    <h4>Group Work</h4>
+                    <p>Proficient in collaborating with teams to achieve common goals</p>
+                </div>
+                <div class="skill">
+                    <h4>Teamwork</h4>
+                    <p>Strong team player with the ability to work well with others</p>
+                </div>
+                <div class="skill">
+                    <h4>Content Management</h4>
+                    <p>Skilled in organizing, updating, and managing digital content</p>
+                </div>
+                <div class="skill">
+                    <h4>Playtesting</h4>
+                    <p>Experienced in testing games to identify bugs and improve user experience.</p>
                 </div>
             </div>
         </section>
@@ -112,7 +136,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare moll.</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="musiccover.png" alt="Music">
+                    <img src="musiccover1.png" alt="Music">
                     <button>Music</button>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare moll.</p>
                 </div>
