content/style change

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         </nav>
     </header>
     <main>
-        <section class="intro">
+        <section class="intro" id="intro">
             <div class="intro-text">
                 <h2>Hi!<br>I'm Shun Xu</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare mollis risus sed mattis. Nunc at mauris ut velit sollicitudin dignissim ac eget turpis. Duis quis laoreet tellus, eu condimentum mauris. Quisque sed imperdiet lorem. Fusce euismod risus eu tortor dapibus vehicula. Integer rhoncus lorem nec lobortis sagittis. Aenean elementum et lorem in suscipit. Suspendisse at diam eget quam laoreet viverra.</p>
-                <button>View Work</button>
+                <p>A dedicated software developer with comprehensive expertise in both front-end and back-end development, committed to transforming ideas into reality. I am also experienced in game development, game playtest, and the creation of 2D/3D assets.</p>
+                <a href="#portfolio"><button>View Work</button></a>
             </div>
             <div class="intro-image">
                 <img src="aboutme.png" alt="Shun Xu">
             </div>
         </section>
-        <section class="skills">
+        <section class="skills" id="skills">
             <h2>My Skills</h2>
             <h3>Technical Skillset</h3>
             <div class="skills-container">
@@ -98,58 +98,58 @@
                 </div>
                 <div class="skill">
                     <h4>Customer Service</h4>
-                    <p>Experienced in managing customer interactions, resolving issues, and providing support.</p>
+                    <p>Experienced in managing customer interactions, resolving issues, and providing support</p>
                 </div>
                 <div class="skill">
                     <h4>Translation</h4>
-                    <p>Capable of translating content while maintaining original meaning and context.</p>
+                    <p>Capable of translating content while maintaining original meaning and context</p>
                 </div>
                 <div class="skill">
                     <h4>Group Work</h4>
-                    <p>Proficient in collaborating with teams to achieve common goals</p>
+                    <p>Strong team player and proficient in collaborating with teams to achieve goals</p>
                 </div>
-                <div class="skill">
+                <!-- <div class="skill">
                     <h4>Teamwork</h4>
                     <p>Strong team player with the ability to work well with others</p>
-                </div>
+                </div> -->
                 <div class="skill">
                     <h4>Content Management</h4>
                     <p>Skilled in organizing, updating, and managing digital content</p>
                 </div>
                 <div class="skill">
                     <h4>Playtesting</h4>
-                    <p>Experienced in testing games to identify bugs and improve user experience.</p>
+                    <p>Experienced in testing games to identify bugs and improve user experience</p>
                 </div>
             </div>
         </section>
-        <section class="portfolio">
+        <section class="portfolio" id="portfolio">
             <h2>Portfolio</h2>
             <div class="portfolio-items">
                 <div class="portfolio-item">
                     <img src="sfeventcover.png" alt="SF Events">
                     <button>SF Events</button>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare moll.</p>
+                    <p>It’s a Meet-Up clone that lets users view/create/update/delete groups and events.</p>
                 </div>
                 <div class="portfolio-item">
                     <img src="travelernotecover.png" alt="Traveler Note">
                     <button>Traveler Note</button>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare moll.</p>
+                    <p> A platform for managing travel itineraries and finances and sharing travel destinations and anecdotes.</p>
                 </div>
                 <div class="portfolio-item">
                     <img src="musiccover1.png" alt="Music">
                     <button>Music</button>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare moll.</p>
+                    <p>Music information station similar to Spotify allows users to add song information to custom albums and playlists.</p>
                 </div>
             </div>
         </section>
 
-        <section class="cta">
+        <section class="cta" id="contact">
             <div class="cta-image">
                 <img src="contact.png" alt="Ready to work with me?">
             </div>
             <div class="cta-text">
                 <h2>Ready to work with me?</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt finibus diam. Nulla ornare mollis risus sed mattis. Nunc at mauris ut velit sollicitudin dignissim ac eget turpis. Duis quis laoreet tellus, eu condimentum mauris. Quisque sed imperdiet lorem. Fusce euismod risus eu tortor dapibus vehicula. Integer rhoncus lorem nec lobortis sagittis. Aenean elementum et lorem in suscipit. Suspendisse at diam eget quam laoreet viverra.</p>
+                <p>With a proactive mindset and years of expertise across various fields, I am confident in my ability to contribute effectively in any environment. I thrive on challenges and am committed to continuous improvement, embracing both advancements and setbacks in the software development process.</p>
                 <button>Contact</button>
             </div>
         </section>
