--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="#skills">SKILLS</a></li>
-                <li><a href="#experience">EXPERIENCE</a></li>
+                <!-- <li><a href="#experience">EXPERIENCE</a></li> -->
                 <!-- <li><a href="#blog">Blog</a></li> -->
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
