--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="#portfolio"><button>View Work</button></a>
             </div>
             <div class="intro-image">
-                <img src="aboutme.png" alt="Shun Xu">
+                <img src="img/aboutme.png" alt="Shun Xu">
             </div>
         </section>
         <section class="skills" id="skills">
@@ -126,18 +126,18 @@
             <h2>Portfolio</h2>
             <div class="portfolio-items">
                 <div class="portfolio-item">
-                    <img src="sfeventcover.png" alt="SF Events">
-                    <button>SF Events</button>
+                    <img src="img/sfeventcover.png" alt="SF Events">
+                    <a href="https://auth-me-v8f1.onrender.com/"><button>SF Events</button></a>
                     <p>It’s a Meet-Up clone that lets users view/create/update/delete groups and events.</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="travelernotecover.png" alt="Traveler Note">
-                    <button>Traveler Note</button>
-                    <p> A platform for managing travel itineraries and finances and sharing travel destinations and anecdotes.</p>
+                    <img src="img/travelernotecover.png" alt="Traveler Note">
+                    <a href="https://travel-note-com.onrender.com/"><button>Traveler Note</button></a>
+                    <p>A platform for managing travel itineraries and finances and sharing travel destinations and anecdotes.</p>
                 </div>
                 <div class="portfolio-item">
-                    <img src="musiccover1.png" alt="Music">
-                    <button>Music</button>
+                    <img src="img/musiccover.png" alt="Music">
+                    <a href="https://groupprojectspotify-c5pw.onrender.com/"><button>Music</button></a>
                     <p>Music information station similar to Spotify allows users to add song information to custom albums and playlists.</p>
                 </div>
             </div>
@@ -145,7 +145,7 @@
 
         <section class="cta" id="contact">
             <div class="cta-image">
-                <img src="contact.png" alt="Ready to work with me?">
+                <img src="img/contact.png" alt="Ready to work with me?">
             </div>
             <div class="cta-text">
                 <h2>Ready to work with me?</h2>
