--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="cta-text">
                 <h2>Ready to work with me?</h2>
                 <p>With a proactive mindset and years of expertise across various fields, I am confident in my ability to contribute effectively in any environment. I thrive on challenges and am committed to continuous improvement, embracing both advancements and setbacks in the software development process.</p>
-                <button>Contact</button>
+                <a href="https://www.linkedin.com/in/shun-xu-a0895918b/"><button>Contact</button></a>
             </div>
         </section>
     </main>
